# GameServerList

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-image.yml
src/: lib.rs  main.rs
